# fastapi-crud-redis

./: README.md  main.py  pyproject.toml
api/: router.py
api/v100/routes/: redis_api.py
core/: settings.py
dependencies/: redis.py
